--- a/challenge1/docker-compose.yaml
+++ b/challenge1/docker-compose.yaml
@@ -5,4 +5,8 @@ services:
       context: .
       dockerfile: ./Dockerfile
     env_file:
-      - .env
+      - ./.env
+    ports:
+      - 8080:8080
+    volumes:
+      - .:/api/api
