--- a/challenge1/.gitignore
+++ b/challenge1/.gitignore
@@ -4,6 +4,8 @@
 /.env.*.local
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
-/var/
 /vendor/
 ###< symfony/framework-bundle ###
+/var/
+/migrations/*
+
