wip: migrating to postgresql

--- a/challenge1/Dockerfile
+++ b/challenge1/Dockerfile
@@ -8,15 +8,27 @@ COPY . .
 
 RUN apk update && apk add --no-cache git
 
+# composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
 ENV PATH="$PATH:/usr/local/bin"
 
 RUN composer install
 
+# symfony
 RUN apk add --no-cache bash && \
     curl -1sLf 'https://dl.cloudsmith.io/public/symfony/stable/setup.alpine.sh' | bash && \
     apk add --no-cache symfony-cli
 
-CMD ["symfony", "server:start", "--port=8080", "--allow-all-ip"]
+# postgres plugin
+RUN apk add --no-cache \
+    libpq-dev \
+    && docker-php-ext-install pdo pdo_pgsql \
+    && docker-php-ext-enable pdo_pgsql
 
+COPY ./scripts/init.sh /init.sh
+RUN chmod +x ./init.sh
+
+ENTRYPOINT [ "/init.sh" ]
+
+CMD ["symfony", "server:start", "--port=8080", "--allow-all-ip"]
