--- a/challenge1/docker-compose.yaml
+++ b/challenge1/docker-compose.yaml
@@ -10,6 +10,7 @@ services:
       - 8080:8080
     networks:
       - app
+    restart: always
     depends_on:
       database:
         condition: service_healthy
