--- a/challenge1/.env.docker
+++ b/challenge1/.env.docker
@@ -27,5 +27,5 @@ APP_SECRET=
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
 
-# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data_%kernel.environment%.db"
-DATABASE_URL="postgresql://u:password@localhost:5432/db?serverVersion=17.5&charset=utf8"
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data_dev.db"
+DATABASE_URL="postgresql://u:password@database:5432/db?serverVersion=17.5&charset=utf8"
