--- a/challenge1/docker-compose.yaml
+++ b/challenge1/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
       context: .
       dockerfile: ./Dockerfile
     env_file:
-      - ./.env
+      - ./.env.docker
     ports:
       - 8080:8080
     networks:
@@ -14,21 +14,22 @@ services:
     depends_on:
       database:
         condition: service_healthy
+    # volumes:
+    #   - .:/app/api
+    stop_grace_period: 5m
 
   database:
     image: postgres:17.5
-    ports:
-      - 5432:5432
     restart: always
     shm_size: 128mb
     environment:
-      POSTGRES_USER: user
+      POSTGRES_USER: u
       POSTGRES_PASSWORD: password
       POSTGRES_DB: db
     networks:
       - app
     volumes:
-      - ./var/lib/postgresql/data:/var/lib/postgresql/data
+      - ./dbdata/lib/data:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD", "pg_isready", "-U", "user", "-d", "db"]
       interval: 5s
