--- a/challenge1/services.yaml
+++ b/challenge1/services.yaml
@@ -4,3 +4,7 @@ services:
     arguments:
       $passwordHasher: '@security.password_hasher'
       $jwtManager: '@lexik_jwt_authentication.jwt_manager'
+  App\EventListener\JWTCreatedListener:
+    arguments: ['@request_stack']
+    tags:
+      - {name: kernel.event_listener, event: lexik_jwt_authentication.on_jwt_created, method: onJWTCreated}
