--- a/challenge1/config/routes.yaml
+++ b/challenge1/config/routes.yaml
@@ -5,3 +5,7 @@ controllers:
     path: ../src/Controller/
     namespace: App\Controller
   type: attribute
+
+api_login_check:
+  path: /api/login
+  methods: [POST]
