--- a/challenge1/config/packages/security.yaml
+++ b/challenge1/config/packages/security.yaml
@@ -15,10 +15,11 @@ security:
         password_path: password
         success_handler: lexik_jwt_authentication.handler.authentication_success
         failure_handler: lexik_jwt_authentication.handler.authentication_failure
-    api:
-      pattern: ^/api
-      stateless: true
-      jwt: ~
+
+    # api:
+    #   pattern: ^/api
+    #   stateless: true
+    #   jwt: ~
 
     dev:
       pattern: ^/(_(profiler|wdt)|css|images|js)/
