chore: jwt routes still not working

--- a/challenge1/config/routes.yaml
+++ b/challenge1/config/routes.yaml
@@ -1,4 +1,3 @@
-
 controllers:
   prefix: /api
   name_prefix: api_
@@ -8,5 +7,5 @@ controllers:
   type: attribute
 
 api_login_check:
-  path: /api/login
+  path: /api/login_check
   methods: [POST]
