--- a/challenge1/config/packages/security.yaml
+++ b/challenge1/config/packages/security.yaml
@@ -6,21 +6,6 @@ security:
   providers:
     users_in_memory: {memory: null}
   firewalls:
-    login:
-      pattern: ^/api/login
-      stateless: true
-      json_login:
-        check_path: /api/login
-        username_path: email
-        password_path: password
-        success_handler: lexik_jwt_authentication.handler.authentication_success
-        failure_handler: lexik_jwt_authentication.handler.authentication_failure
-
-    # api:
-    #   pattern: ^/api
-    #   stateless: true
-    #   jwt: ~
-
     dev:
       pattern: ^/(_(profiler|wdt)|css|images|js)/
       security: false
@@ -28,17 +13,17 @@ security:
       lazy: true
       provider: users_in_memory
 
-  access_control:
-    - {path: ^/admin, roles: ROLE_ADMIN}
-    - {path: ^/profile, roles: ROLE_USER,}
-    # activate different ways to authenticate
-    # https://symfony.com/doc/current/security.html#the-firewall
+      # activate different ways to authenticate
+      # https://symfony.com/doc/current/security.html#the-firewall
 
-    # https://symfony.com/doc/current/security/impersonating_user.html
-    # switch_user: true
+      # https://symfony.com/doc/current/security/impersonating_user.html
+      # switch_user: true
 
   # Easy way to control access for large sections of your site
   # Note: Only the *first* access control that matches will be used
+  access_control:
+  # - { path: ^/admin, roles: ROLE_ADMIN }
+  # - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
   security:
