feat: login endpoint

--- a/challenge1/.env.dev
+++ b/challenge1/.env.dev
@@ -2,3 +2,4 @@
 ###> symfony/framework-bundle ###
 APP_SECRET=82e867b6d0deedcf8ffa35a430895b16
 ###< symfony/framework-bundle ###
+JWT_SECRET=your_secret_key_here
