--- a/challenge1/.env.docker
+++ b/challenge1/.env.docker
@@ -29,3 +29,5 @@ APP_SECRET=
 
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data_dev.db"
 DATABASE_URL="postgresql://u:password@database:5432/db?serverVersion=17.5&charset=utf8"
+
+JWT_SECRET=public-secret
