--- a/challenge1/composer.json
+++ b/challenge1/composer.json
@@ -31,6 +31,7 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^4.1",
+        "liip/test-fixtures-bundle": "^3.5",
         "symfony/maker-bundle": "^1.64"
     },
     "config": {
